# wstunnel

./: .gitignore  README.en.md  README.md  pyproject.toml  requirements.txt  wstunnel.md  深度解析.md  评价.md
.github/workflows/: publish.yml
docs/: 0.9.0重构说明.md  压缩原理深度解析.md  安全升级指南.md  深度剖析.md  深度解析.md  评价.md  项目评估与展望.md
tests/: test_cli.py  test_client.py  test_file_transfer.py  test_protocol.py  test_relay.py  test_security.py
web/: index.html
ws_tunnel/: cli.py  client.py  relay.py
wsstunnel/: cli.py  client.py  relay.py  security.py
wsstunnel/.ai/: context.json
wsstunnel/web/: index.html
