[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsstunnel"
version = "0.7.0"
description = "WebSocket reverse shell relay with PTY support and HTTP proxy traversal"
authors = [{name = "yuanguangshan"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websocket-client >= 1.3.0",
    "websockets >= 10.0",
    "click >= 8.0",
]

[project.scripts]
ws-tunnel = "ws_tunnel.cli:main"

[project.urls]
Homepage = "https://github.com/yuanguangshan/wstunnel"
