[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsstunnel"
version = "0.18.18"
description = "WebSocket reverse shell relay with PTY support and HTTP proxy traversal"
authors = [{name = "yuanguangshan"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websocket-client >= 1.3.0",
    "websockets >= 10.0",
    "click >= 8.0",
    "httpx >= 0.24.0",
]

[project.scripts]
wsstunnel = "wsstunnel.cli:main"

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["wsstunnel*"]

[tool.setuptools.package-data]
wsstunnel = ["web/*"]

[project.urls]
Homepage = "https://github.com/yuanguangshan/wstunnel"
